<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@id/nav_graph_routes"
        android:icon="@drawable/baseline_terrain_black_48"
        android:title="@string/main_navigation_item_title_routes" />

    <item
        android:id="@id/nav_graph_workouts"
        android:icon="@drawable/baseline_bar_chart_black_48"
        android:title="@string/main_navigation_item_title_workouts" />

    <item
        android:id="@id/nav_graph_calories"
        android:icon="@drawable/baseline_directions_run_black_48"
        android:title="@string/main_navigation_item_title_calories" />

    <item
        android:id="@id/action_global_logout"
        android:icon="@drawable/baseline_arrow_back_black_24"
        android:title="@string/log_out" />

</menu>