<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/nav_graph"
        app:startDestination="@id/login_fragment">

    <navigation
            android:id="@+id/nav_graph_routes"
            app:startDestination="@id/route_browse">
        <fragment
                android:id="@+id/route_browse"
                android:name="rs.ac.bg.etf.running.routes.RouteBrowseFragment"
                android:label="@string/route_browse_toolbar_title"
                tools:layout="@layout/fragment_route_browse">
            <action
                    android:id="@+id/action_show_route_details"
                    app:destination="@id/route_details" />
        </fragment>
        <fragment
                android:id="@+id/route_details"
                android:name="rs.ac.bg.etf.running.routes.RouteDetailsFragment"
                android:label="@string/route_details_toolbar_title"
                tools:layout="@layout/fragment_route_details">
            <argument
                    android:name="route_index"
                    android:defaultValue="0"
                    app:argType="integer" />
        </fragment>
    </navigation>

    <navigation
            android:id="@+id/nav_graph_workouts"

            app:startDestination="@id/workout_list">
        <fragment
                android:id="@+id/workout_list"
                android:name="rs.ac.bg.etf.running.workouts.WorkoutListFragment"
                android:label="@string/workout_list_toolbar_title"
                tools:layout="@layout/fragment_workout_list">
            <action
                    android:id="@+id/create_workout"
                    app:destination="@id/workout_create" />
            <action
                    android:id="@+id/start_workout"
                    app:destination="@id/workout_start" />
        </fragment>
        <fragment
                android:id="@+id/workout_create"
                android:name="rs.ac.bg.etf.running.workouts.WorkoutCreateFragment"
                android:label="@string/workout_create_toolbar_title"
                tools:layout="@layout/fragment_workout_create" />
        <fragment
                android:id="@+id/workout_start"
                android:name="rs.ac.bg.etf.running.workouts.WorkoutStartFragment"
                android:label="@string/workout_start_toolbar_title"
                tools:layout="@layout/fragment_workout_start" />
    </navigation>

    <navigation
            android:id="@+id/nav_graph_calories"
            app:startDestination="@id/calories">
        <fragment
                android:id="@+id/calories"
                android:name="rs.ac.bg.etf.running.calories.CaloriesFragment"
                android:label="@string/calories_toolbar_title"
                tools:layout="@layout/fragment_calories" />
    </navigation>

    <fragment
            android:id="@+id/login_fragment"
            android:name="rs.ac.bg.etf.running.users.LoginFragment"
            android:label="fragment_login"
            tools:layout="@layout/fragment_login"/>

    <action
            android:id="@+id/action_global_logout"
            app:destination="@id/login_fragment"
            app:popUpTo="@id/login_fragment"
            app:popUpToInclusive="true" />
</navigation>